libs/extractor/tests/snapshots/all_tests__convert_tag-16.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box as={{A: \"section\", B: \"div\", C: Variable, D, [\"key\"]: \"section\", ...rest}[\"key\"]} w=\"100%\" h=\"100%\" />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "height",
                value: "100%",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "width",
                value: "100%",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<>{{\n\tA: <section className=\"a b\" />,\n\tB: <div className=\"a b\" />,\n\tC: <Variable className=\"a b\" />,\n\tD: <D className=\"a b\" />,\n\t[\"key\"]: <section className=\"a b\" />,\n\t...rest\n}[\"key\"]}</>;\n",
}
